Your site should look good

--- a/contents/compelling/your_site_should_look_good.tex
+++ b/contents/compelling/your_site_should_look_good.tex
@@ -1,47 +1,46 @@
 \subsection{Your site should look good}
 
-It is important that the information is attractive, eye-catching and with sparkle. This is not only important from a conceptual point of view, but also from a functional one. We saw this previously, where we considered the importance
-of good data presentation, using a structure that guides the user in a logical and orderly manner.\\
+You want to grab the users attention from the outset - it is important that the information is attractive and eye-catching.
+This is important not only from an aesthetic point of view, but also from a functional one.
+This is similar to the importance of good data presentation, using a structure that guides the user in a logical and orderly manner.\\
 
-We want to grab the users attention from the outset. For this we propose the following desirable features for the tool- that it be fun, entertaining,
-modern, current, easy to use, high quality, attractive and beautiful. Although some of these characteristics are subjective, there are techniques available to achieve these objectives.\\
+Other more technical characteristics are:
+\begin{itemize}
+    \item\textbf{Consistent} Controls that perform similar actions should have the similar appearance.
+    A label with different typology or other color may jarr the user's perception. Use strong colours sparingly, when
+    you want to highlight something in particular. \\
 
-Other more technical characteristics are: \\
+    \item\textbf{Clean and well-organized} An organized design looks better, give a more peaceful feeling and enables the user to find what they are looking for more easily. \\ 
 
-\textbf{Consistent} Controls that perform similar actions must maintain the same design. Functionalities
-should also follow this principle. \\
+    \item\textbf{Branded} It is highly recommended to 'brand' yourself, so that users can recognize you quickly. For this you can utilize a symbol, a combination of colors, a logo, or a device.
+    All the value arising from the quality of your product will accrue to your brand. It is an asset that can be reused in other contexts. \\
+\end{itemize}
 
-\textbf{Clean and ordered} An organized design looks better, give a more peaceful feeling and enables the user to find what they are looking for
-more easily.\\
-
-\textbf{Detailed} A label with different typology or other color may jarr the user's perception. Only use when
-we want to highlight something in particular!. \\
-
-\textbf{Branded} It is highly recommended to 'brand' ourselves, so that users can recognize us quickly. For this we can utilize a symbol, a combination of colors, a logo, etc.\\
-
-To be able to hook our users, gamification is currently widely used. This is where we give a gaming aspect to the representation of the data. The user tries it because it catches their attention, it's fun.
-Certainly, at some point the novelty wears off, but, even so, the user has learned to use the interface and now feels well-disposed to continue to use it.
+% TODO: Not sure where this belongs. Maybe compelling?
+% To be able to hook our users, gamification is currently widely used. This is where we give a gaming aspect to the representation of the data. The user tries it because it catches their attention, it's fun.
+% Certainly, at some point the novelty wears off, but, even so, the user has learned to use the interface and now feels well-disposed to continue to use it.
 
 \subsubsection*{Suggested strategies}
 
 \begin{itemize}
-    \item To make an attractive design, we must keep abreast of current trends, as well as study good design practices.
-    \item It is highly recommended to maintain a simple and clean design, to use standards and mechanisms that are familiar to users,
-    to care of details and to present our identity.
+    \item To make an attractive design, we must keep abreast of current trends, and study good design practices.
+    \item Maintain a simple and clean design, and use standards and mechanisms that are familiar to users.
 \end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
-As we commented previously the design has been based on Google's Material Design, using straight lines, differentiating individual sections by using rectangles and using colors that contrast the information from the background.
-The background color for the graphics is a neutral white. Only shades of blue, gray and white are used. In addition, we have chosen a font that is easy to read.\\
+The visual design of Aire Guru is based on Google's Material Design, using straight lines, differentiating individual sections by using rectangles
+and using colors that contrast the information from the background.
+The background color for the graphics is a neutral white.
+Only shades of blue, gray and white are used. In addition, we chose a font that is easy to read.\\
 
-The sections are arranged neatly and structured by using a header and a body.\\
+The sections are arranged neatly and regularly, and structured by using a header and a body.\\
 
 The central page consists of a header, the body and a footer. Both the header and the footer are static,
-they are shown in all the pages and they contain all the information needed to navigate between pages.
+they are shown in all the pages and they contain all the information needed to navigate between pages. Thus the site controls are consistent no matter what page the user is on.
 The body is divided into three horizontal sections, the upper area with the map and the general information about the selected point,
 the central area where we can filter the pollutants by medical conditions and information about the current air status, and the
-lower area where we will find the zone and custom history.
+lower area where we have the zone and custom history.\\
 
 \begin{figure}[ht]
     \centering
@@ -49,15 +48,8 @@ lower area where we will find the zone and custom history.
     \caption{Heading}
 \end{figure}
  
-The symbol of our webtool is a genius, is a guru. We also include "Aire" in the logo, because it perfectly represents 
-what we show with our webtool. Aire Guru is the genius of air.
+The symbol of our webtool is a genius - a guru. We also include the word "Aire" in the logo, because it perfectly represents 
+what we show with our webtool. Aire, as you might have guessed, is Spanish for Air. Aire Guru is the guru of air quality. \\
 
-Finally, we've taken into account that the user may wish to use our webtool on different devices. We've implemented
-two different formats, one for larger screens such as the computer and another for smaller format tablets or mobiles.
-
-\begin{itemize}
-    \item The design is organized and clean. 
-    \item The user can easily find what they are looking for.
-    \item Minimized numbers of clicks since the most relevant info is shown directly in the launching page.
-    \item Although there have been attempts to implement the design aesthetics that are now trending on the market, the design can be improved.
-\end{itemize}
+Finally, we've taken into account that the user may wish to use our webtool on different devices, therefore we have implemented
+two different formats, one for larger screens such as the computer and another for smaller format tablets or mobile devices.
