Remove all barriers to access

--- a/chapter.tex
+++ b/chapter.tex
@@ -34,6 +34,6 @@
 \input{contents/relevant/_section} 
 \input{contents/compelling/_section} 
 \input{contents/conclusion/_section} 
-\input{contents/references/_section} 
+% \input{contents/references/_section} 
 
 \end{document}
