--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -1,16 +1,21 @@
 \subsection{Make your data available}
     
 As we mentioned in the introduction to this chapter, the datasets may be available in the original source. However, this doesn't necessarily
-mean that they are readily accessible.
-The challenges we encounter with the raw data direct from the source of origin, are the following: \\   
- 
-\textbf{Location}. Datasets are usually available in open data portals that have been organized and structured in particular ways.
-Despite more companies attempting to offer functional and efficient user interfaces, often a complicated search and selection process is necessary for a user to find what they need. Sometimes the data may not all be available in the one location, but may require searching through multible portals.
+mean that they are readily accessible.\\
 
-\textbf{Extraction}. Datasets are usually available through an API (Application Programming Interface). APIs are not easily interpretable by the average user. Normally there will be a document describing the fields and values presented, and indicating how to actually use the API. \\
+The challenges we encounter with the raw data direct from the source of origin, are the following:
 
-\textbf{Readability}. Datasets are usually represented in a format designed to be processed by software. This is fairly unintelligible to a human user. At best,
-the data will be represented in a table and even then, it will often be quite difficult to extract the required information.
+\begin{itemize}
+    \item \textbf{Location}. Datasets are usually available in open data portals that have been organized and structured in particular ways.
+    Despite more companies attempting to offer functional and efficient user interfaces, often a complicated search and selection process is necessary for a user to find what they need.
+    Sometimes the data may not all be available in the one location, but may require searching through multible portals.
+
+    \item \textbf{Extraction}. Datasets are usually available through an API (Application Programming Interface). APIs are not easily interpretable by the average user.
+    Normally there will be a document describing the fields and values presented, and indicating how to actually use the API. \\
+
+    \item \textbf{Readability}. Datasets are usually represented in a format designed to be processed by software. This is fairly unintelligible to a human user. At best,
+    the data will be represented in a table and even then, it will often be quite difficult to extract the required information.
+\end{itemize}
 
 Therefore, we can not say that data interfaces are commonly accessible in a useful way for the average user. \\
 
@@ -47,12 +52,3 @@ In this case, if we click on the link, data is displayed in a new tab. The use o
 for translating the data is not strictly necessary, but we can see that the format (JSON) is not easily readable in human terms.
 
 Aire Guru offers all the necessary information on a web platform which has been designed to facilitate human understanding.
-
-\begin{itemize}
-    \item Location. Finding data is made simple, since information is displayed immediately on accessing the website. The main page
-          presents the levels of pollution in all areas without the need to make any selection.
-    \item Extraction. No specialist software or computer knowledge is necessary to access the information.
-    \item Readability. Aire Guru includes a map which shows pollution levels, represented by different colors. These colors are defined by a legend
-          below the map. It also includes a glossary explains the concepts presented on the website, the meaning of each section and includes clear instructions on how to
-          use and navigate through the web page.
-\end{itemize}
