--- a/contents/accessible/remove_all_barriers_to_access.tex
+++ b/contents/accessible/remove_all_barriers_to_access.tex
@@ -1,34 +1,36 @@
 \subsection{Remove all barriers to access}
-We already told about offering the data directly to the user but going back to the concept that available
-does not mean accessible. If we lock ourself and make a completly private platform, we would lose the oportunity
-to bring the information to the users.\\
 
-We break these barriers building a service free of charge, or at least as free as it can be. Of course, if we are 
-working with data of third parties and they have a restricted policy, we will need to adjust the rates to cover
-these restrictions.\\
+There are three surefire ways to deter potential users of your site: registration, payment, and advertising.\\
 
-It is recomendable to do not force our users to identify theirself or provide data if this is not
-extrictly necesary for the proper behaviour of our data representation. As we mention before, collecting data from our
-users requires a major efford to ensure their security. Furthemore, we see like every year, the laws ajust to provent
-the abuse with the data of the users. If we use any user's data, we should make sure it not compromise the law.\\
+Users hate being asked to provide any information, let alone registering as a user - considering the prevalence of data breaches that are regularly in the news, it is little wonder.
+In many cases registration is used to capture the user so that the site owner can subsequently market to them.
+This is the reality behind the well-known meme "The user \emph{is} the product".
+Collecting data from your users also requires a major effort to ensure the security of the recorded data.
+Finally, laws are continually adjusted to prevent the abuse of user data, and you will have to meet the requirements of these laws in each of the jurisdictions that you operate. \\
 
-All of us have noticed how annoying is to be reading an article when more than the 50\% of the information is advertising.
-We problably do not want to give the same impression to our users since it can repel them to the point that they will no longer
-user our tool. If we need to use this kind of tecnics to support our system, We will problably choose the right places to offer 
-these advertising without interfering in the representation of our information.
+Requring payment to access your data is the kiss of death, and is the reason so many providers rely on advertising 
+revenue to support their sites. It is very rare to have data, or a service, that is so intrinsically compelling that
+people are prepared to pay for it.
+Of course, if you are working with third party data you might have no option. \\
 
+Advertising is the least problematic of these, as long as it is delivered in a non-intrusive manner, however
+all of us have noticed how annoying is to be reading an article when a significant percentage of the screen is taken up with advertising.
+We do not want to give the same impression to our users since it can repel them to the point that they will no longer
+user our tool. For small screen sizes it is even more difficult because there is so little available space.\\
 
 \subsubsection*{Suggested strategies} 
 
 \begin{itemize}
-    \item To remove the biggest amount of barriers we will try to offer a low rate system, no force the user to provide any unjustified 
-    data and avoid advertising which obstructs the representation of our data.
+    \item Don't require the user to login or register unless it is absolutely neccessary, and even then, only for the subset
+    of your data thet requires it.
+    \item Don't require payment.
+    \item If you must include advertisting, ensure it does not intrude on your content.
 \end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
-Aire Guru is available online completely free of charge. It requieres login, since it shows the personal records of the 
-user exposure to pollution. However, all the rest of the funtionabilities are offered to all the users, identified and no 
-identified.
+Aire Guru is available online completely free of charge. \\
 
-Aire Guru does not use advertising.
+Aire Gure only requires login to show the record of the user's exposure to pollution. All other funtionality is available without requiring any identification. \\
+
+Aire Guru does not include advertising.
